# aa_2526

./: .gitignore  README.md  pyproject.toml
02_Scikit_learn/: P2.ipynb
03_Tabular/: P3.ipynb
04_Imatges/: P4.ipynb
04_Imatges/solucio/: P4.ipynb
05_CNN/: P5.ipynb
06_Transfer/: AlexNet_Transfer.ipynb
06_Transfer/solucio/: AlexNet_Transfer.ipynb
07_Batch_normalization/: Batch_normalization.ipynb
08_Detecció/: Detecció.ipynb
09_Self_supervised/: Self supervised.ipynb
09_Self_supervised/solució/: Self supervised.ipynb
10_UNet/: Unet.ipynb
11_Desde_0/: main.ipynb
12_Text/: main.ipynb  tirant.txt
