[project]
name = "aa-2526"
version = "0.3.0"
description = "Material del curs 2025-2026 de l'assignatura Aprenentatge Automàtic a la UIB (21781)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
